correctly apply the dark mode selector

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -2872,7 +2872,7 @@ Usage (In Ghost editor):
         opacity: 0.9;
     }
 
-    blockquote {
+    .post-full-content blockquote {
         background: #69748A;
     }
 
